# pyspark-terraform-scaffold

./: README.md  bronze_jobs.tf  main.tf  pyproject.toml  silver_jobs.tf  vars.tf
deltalake/bronze/: play.py
