[tool.poetry]
name = "pyspark-tdd-terraform-scaffold"
version = "0.1.0"
description = "example project demonstrating test driven pyspark development and Terraform"
authors = ["Pavan Raju <pavanraju023@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pyspark = "^3.2.0"
delta-spark = "^1.2.0"
pytest = "^7.1.2"
chispa = "^0.9.2"
moto = "^3.1.16"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -rx -p no:warnings"
testpaths = [
    "tests",
]